--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,26 @@
 asgiref==3.2.7
+beautifulsoup4==4.9.0
+certifi==2020.4.5.1
+chardet==3.0.4
+defusedxml==0.6.0
 Django==3.0.5
+django-allauth==0.41.0
+django-bootstrap-datepicker==1.4.0
+django-bootstrap-datepicker-plus==3.0.5
+django-bootstrap-daterangepicker==1.0.5
+django-bootstrap4==1.1.1
 django-ckeditor==5.9.0
 django-js-asset==1.2.2
+django-recaptcha3==0.2.0
+idna==2.9
+oauthlib==3.1.0
 Pillow==7.1.1
+python-dateutil==2.8.1
+python3-openid==3.1.0
 pytz==2019.3
+requests==2.23.0
+requests-oauthlib==1.3.0
+six==1.14.0
+soupsieve==2.0
 sqlparse==0.3.1
+urllib3==1.25.9
