--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # to change language of repo from Javascript to Python
-    *.HTML linguist-language=Python
-    *.js linguist-language=Python
+    *.html linguist-language=Python
+;     *.js linguist-language=Python
